# randomTranslate

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.md
.openclaw/: workspace-state.json
.venv_tmp/: pyvenv.cfg
artifacts/tests/: dic_attempt1.txt
artifacts/tests/term_audit/: mismatch_rows.csv  summary.txt  variation_like_rows.csv
artifacts/tests/term_audit_merged/: db_en_unused_in_translation.txt  line_mismatches.csv  summary.txt
file-translator/: Dockerfile  README.md
file-translator/src/file_translator/: services.py
file-translator/src/file_translator/templates/: index.html
kb/projects/file-translator/: README.md  design.md  docker-compose.yml  pyproject.toml
kb/projects/file-translator/99-research/: github-benchmark-links.md  pdfmathtranslate-notes.md
kb/projects/file-translator/src/file_translator/: __init__.py  cli.py  core.py  file_ops.py  worker.py
scripts/: start-local.bat  start-local.ps1  start-local.sh
skills/autopilot-manager/: SKILL.md
src/file_translator/: app.py  cli.py  core.py  db.py  file_ops.py  services.py  tasks.py  translator_terms.db  worker.py
src/file_translator.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/file_translator/templates/: index.html
test/: dic.txt  test_multi_format.py  test_recognition_rate.py  test_translation_verify.py
test/fixtures/: sample.docx  sample.json  sample.md  sample.txt
